--- a/WebContent/back-end/css/campOrder.css
+++ b/WebContent/back-end/css/campOrder.css
@@ -12,7 +12,8 @@
             --header-bg: rgb(116, 190, 116);
         }
         
-        body {
+         body {
+         	width:100%;
             font-family: 'Oswald', sans-serif;
             background-color: #FFFFFF;
             line-height: 1.5;
@@ -28,6 +29,7 @@
             margin-right: auto;
             z-index: 1;
         }
+        
         /* Sticky header */
         
         .header-outer {
@@ -116,7 +118,6 @@
             bottom: -2px;
             left: 0;
         }
-        
         @media (min-width: 800px) {
             .header-navigation a {
                 font-size:20px;
@@ -126,8 +127,8 @@
                 display: none;
             }
         }
-
         /* =====================main區域========================*/
+        
         h1{
             color:black;
             text-align: center;
@@ -142,13 +143,14 @@
             font-size:18px;
             text-align: left;
             font-weight:bold;
-            margin-left:30px ;
+            margin-left:230px ;
         }
+        
 
         table{
           border:1px solid blck;
           border-collapse: collapse;
-          margin-left: 280px;
+          margin-left:230px ;
           margin-top: 80px;
           table-layout: fixed;
           width: 70%;
@@ -158,7 +160,6 @@
           text-align: center; 
           
         }
-
         .topnav{
             margin-left:885px;
             margin-top:100px;        
@@ -168,11 +169,17 @@
             font-family: Arial;
         }
 
-        * {
-            box-sizing: border-box;
+       
+       
+        .selector{
+         height: 27px;
+         margin-right:10px;
+         float: left;
+     
         }
         
         form.searchForm input[type=text] {
+        
             padding: 5px;
             font-size: 10px;
             border: 1px solid grey;
@@ -181,7 +188,7 @@
             background: #f1f1f1;
             max-width: 100%;
            
-            }
+         }
 
         form.searchForm button {
             float: left;
@@ -200,31 +207,61 @@
         form.searchForm button:hover {
             background: #0b7dda;
         }
-
-        form.searchForm::after {
+        
+         form.searchForm::after {
             content: "";
             clear: both;
             display: table;
         }
         
         div.divSearchForm{
-            margin-left: 100px;
+            
+            margin-left:700px ;
             margin-top: 80px;
         }
-   
-    /* =====================aside區域========================*/
+        div.pagination {
+       
+           margin-left:540px ;
+          margin-top: 80px;
+		  display: inline-block;
+		  
+		}
+		
+		.pagination a {
+		  color: black;
+		  float: left;
+		  padding: 8px 16px;
+		  text-decoration: none;
+		  border-radius: 5px;
+		  border: 1px solid #ddd;
+		}
+		
+		.pagination a.active {
+		  background-color: #4CAF50;
+		  color: white;
+		  border-radius: 5px;
+		}
+		
+		.pagination a:hover:not(.active) {
+		  background-color: #ddd;
+		  border-radius: 5px;
+		}
+	
+	 /* =====================aside區域========================*/
+		
+	 
     aside.aside{            
         position: fixed;
-        left: 0;
-        top: var(--header-height);
+  		left: 0;
+        top: 0;
         width: var(--aside-width);
         height: calc(100% - var(--header-height));
         overflow-x: visible;
-        padding: 20px 0;
+        padding: 100px 0 0 0;
 
         transition: all 1s;
     }
-    .clearfix:before,
+     .clearfix:before,
     .clearfix:after {
         content: " ";
         display: table;
@@ -240,13 +277,14 @@
     .container {
         position: relative;
         margin: 0px auto;
-        padding: 50px 0;
+        padding: 10px;
         clear: both;
     }
+    
 
     .mcd-menu {
     list-style: none;
-    padding-left: 30px;
+    padding-left: 5px;
     margin: 0;
     background: #FFF;
     /*height: 100px;*/
@@ -302,7 +340,7 @@
     }
     .mcd-menu li a small {
     display: block;
-    font-size: 10px;
+    font-size: 15px;
     text-align: center;
     }
 
@@ -353,6 +391,7 @@
     box-shadow: 0 0 5px #DDD;
     -moz-box-shadow: 0 0 5px #DDD;
     -webkit-box-shadow: 0 0 5px #DDD;
+    height:90px;'
     
     /* == */
     border-left: 4px solid #e67e22;
@@ -555,6 +594,10 @@
     }
 
     /* =====================footer區域========================*/
+    
+     
+    
+    
         footer {
             position: absolute;
             text-align: center;
